[metadata]
name = stactools-ghcnd
version = attr: stactools.ghcnd.__version__
description = Global Historical Climatology Network daily
long_description = file: README.md
long_description_content_type = text/markdown
author = stac-utils
author_email = jtownend@sparkgeo.com
url = https://github.com/stactools-packages/ghcnd
project_urls =
    Documentation = https://stactools-ghcnd.readthedocs.io/en/latest/
    Issues = https://github.com/stactools-packages/ghcnd/issues
keywords =
    stactools
    pystac
    catalog
    STAC
classifiers =
    Development Status :: 4 - Beta
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[options]
package_dir =
    = src
packages = find_namespace:
install_requires =
    stactools == 0.2.1

[options.packages.find]
where = src
